# django-ecommerce-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
django_ecommerce_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
orders/: admin.py  exceptions.py  metrics.py  models.py  serializer.py  serializers.py  tasks.py  urls.py  views.py
orders/management/commands/: retry_failed_tasks.py
orders/migrations/: 0001_initial.py  0002_initial.py  0003_emaillog.py  0004_order_payment_reference_order_payment_status.py  0005_webhookevent.py  0006_webhookcleanuplog_dailysalesreport_lowstockalert.py  0007_webhookevent_archived_at.py  0008_failedtask.py
orders/utils/: logging.py
users/migrations/: 0001_initial.py
